# llm-playground

./: .gitignore  README.md
.claude-plugin/: marketplace.json
adaptive-memory/: README.md  SUMMARY.md  TODO.md  pyproject.toml
adaptive-memory/.claude-plugin/: plugin.json
adaptive-memory/.claude-plugin/commands/: amem_index.md
adaptive-memory/adaptive_memory/: __init__.py  access_tracker.py  smart_memory.py
agents/: README.md  TODO
agents/code-generator/: AGENT.md  SKILLS.md
agents/code-reviewer/: AGENT.md  CHANGELOG.md  COGNITIVE_MODEL_DESIGN.md  PRIMER.md
agents/data-profiler/: AGENT.md  todo
agents/mech-interp-researcher/: AGENT.md  COGNITIVE_MODEL_DESIGN.md  SKILLS.md
agents/ml-evaluator/: AGENT.md
agents/ml-research-planner/: AGENT.md
agents/ml-trainer/: AGENT.md  SKILLS.md
agents/orchestrator/: AGENT.md  CHANGELOG.md  COGNITIVE_MODEL_DESIGN.md  PRIMER.md  README.md  SKILLS.md
agents/pharmacy-professor/: AGENT.md  SKILLS.md
agents/react-architect/: AGENT.md  (+1 more)
browser-research-toolkit/: .gitignore  TODO.md  plugin.json
constitutional-debate/: .gitignore  QUICKSTART.md  README.md  ROADMAP.md  TODO.md  config.yaml  plugin.json  pyproject.toml
constitutional-debate/claude/commands/: debate_demo.md  debate_export_rft.md  debate_show.md  debate_start.md  debate_validate.md
constitutional-debate/constitutional_debate/: __init__.py  charter.py  config.py  debate_tree.py  debater.py  export_rft.py  orchestrator.py
constitutional-debate/constitutional_debate/cli/: __init__.py  debate.py
constitutional-debate/constitutional_debate/debaters/: __init__.py  base.py  claude.py  factory.py  gemini.py  llama.py  openai_gpt.py  utils.py
constitutional-debate/docs/: REFACTORING.md
constitutional-debate/examples/: microservices_auth.md  rft_workflow_example.py
evals/: harness.py  metrics.md
playbooks/adaptive-memory/: TODO.md  plugin.json  pyproject.toml
playbooks/adaptive-memory/adaptive_memory/: concept_memory.py  multi_workspace.py
playbooks/adaptive-memory/adaptive_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
playbooks/adaptive-memory/adaptive_memory/cli/: __init__.py  amem.py
playbooks/adaptive-memory/claude/commands/: amem_feedback.md  amem_search.md  amem_stats.md
tools/: render.py  score.py
(+420 files in other folders)
